# libVersioningCompiler

./: .gitignore  .gitlab-ci.yml  .travis.yml  ACKNOWLEDGEMENTS.txt  CMakeLists.txt  ChangeLog.txt  README.md  Test.cpp  TestJit.cpp  TestUtils.cpp
cmake/: FindDL.cmake  FindLLVM.cmake  FindLLVM_config.cmake  FindLibClang.cmake  FindUUID.cmake  NormalizePathHelper.cmake
config/: FindLibVersioningCompiler.cmake.in
include/versioningCompiler/: Compiler.hpp  DebugUtils.hpp  JITUtils.hpp  Option.hpp  Utils.hpp  Version.hpp
include/versioningCompiler/CompilerImpl/: ClangLibCompiler.hpp  JITCompiler.hpp  SystemCompiler.hpp  SystemCompilerOptimizer.hpp  TAFFOCompiler.hpp  WarningTestCompiler.hpp
include/versioningCompiler/CompilerImpl/ClangLLVM/: FileLogDiagnosticConsumer.hpp  LLVMInstanceManager.hpp  NewPMDriver.h  OptUtils.hpp
lib/: Compiler.cpp  Option.cpp  Version.cpp
lib/CompilerImpl/: ClangLibCompiler.cpp  JITCompiler.cpp  SystemCompiler.cpp  SystemCompilerOptimizer.cpp  TAFFOCompiler.cpp  WarningTestCompiler.cpp
lib/CompilerImpl/ClangLLVM/: FileLogDiagnosticConsumer.cpp  LLVMInstanceManager.cpp  NewPMDriver.cpp
test_code/: test_code.c
